--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <button id = "MostrarNumeros">PRIMER Y ÚLTIMO VALOR</button>
     <div id = "resultats"> </div>
 
-    <button id = "borrar"> ESBORRAR ÚLTIM VALOR </button>
+    <button id = "Borrar"> ESBORRAR ÚLTIM VALOR </button>
+
+    <button id = "añadir"> AFEGEIX VALORS FINAL </button>
 </body>
 </html>
