--- a/1 - No avaluable/index.html
+++ b/1 - No avaluable/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src = "alabay.js" defer></script>
+    <link rel = "stylesheet" href = "exercici1.css">
 </head>
 <body>
     <div id = llista_numeros></div>
+    <button id = "modificar"> Modificar </button>
 
+    
     <div id = llista_bidimensional1></div>
     <div id = llista_bidimensional2></div>
-
+    
     <button id = "MostrarNumeros">PRIMER Y ÚLTIMO VALOR</button>
     <div id = "resultats"> </div>
 
