--- a/2 - Torre de Hanoi/exercici2.html
+++ b/2 - Torre de Hanoi/exercici2.html
@@ -12,12 +12,32 @@
 <body>
     <input id = "discos" type = "number" max="5" min = "1">
     <button id = "empezar"> START </button>
-    <div class = "row">
-        <div id = "pila1" class = "col-lg-4 text-center"></div>
+    <div id = "torres" class = "row justify-content-evenly">
 
-        <div id = "pila2" class = "col-lg-4 text-center"></div>
+        <div class = "col-lg-3 text-center">
+            <div id = "pila1"> </div>
+            <div>
+                <button id = "p1_btn1"> MOU PILA 2</button>
+                <button id = "p1_btn2"> MOU PILA 3</button>
+            </div>
+        </div>
+        
 
-        <div id = "pila3" class = "col-lg-4 text-center"></div>
+        <div class = "col-lg-3 text-center">
+            <div id = "pila2" ></div>
+            <div>
+                <button id = "p2_btn1"> MOU PILA 1</button>
+                <button id = "p2_btn2"> MOU PILA 3</button>
+            </div>
+        </div>
+
+        <div class = "col-lg-3 text-center">
+            <div id = "pila3" ></div>
+            <div>
+                <button id = "p3_btn1"> MOU PILA 1</button>
+                <button id = "p3_btn2"> MOU PILA 2</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
