--- a/2 - Torre de Hanoi/exercici2.html
+++ b/2 - Torre de Hanoi/exercici2.html
@@ -13,7 +13,6 @@
     <input id = "discos" type = "number" max="5" min = "1">
     <button id = "empezar"> START </button>
     <div id = "torres" class = "row justify-content-evenly">
-
         <div class = "col-lg-3 text-center">
             <div id = "pila1"> </div>
             <div>
@@ -21,7 +20,6 @@
                 <button id = "p1_btn2"> MOU PILA 3</button>
             </div>
         </div>
-        
 
         <div class = "col-lg-3 text-center">
             <div id = "pila2" ></div>
@@ -38,6 +36,7 @@
                 <button id = "p3_btn2"> MOU PILA 2</button>
             </div>
         </div>
+        <div id = "victoria"></div>
     </div>
 </body>
 </html>
