--- a/3 - Buscaminas/exercici3.html
+++ b/3 - Buscaminas/exercici3.html
@@ -10,5 +10,7 @@
 <body>
     <div id = "puntuacion"> Puntuacion: 0</div>
     <div id = "juego"></div>
+
+    <div id = "resultado"></div>
 </body>
 </html>
